# project-related files/swagger.yaml
@@ -320,6 +320,30 @@ paths:
           description: "Status is always 200 (Needs to be fixed). Message if volunteer already joined the activity"
           schema:
             $ref: "#/definitions/Message"
+  /volunteerprofile:
+    post:
+      tags:
+        - "Volunteer-related information"
+      summary: "API to retrieve volunteer details for volunteer profile"
+      description: ""
+      operationId: "volunteerprofile"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "volunteer_id"
+          in: "path"
+          description: "ID of the activity"
+          required: true
+          type: "string"
+      responses:
+        200:
+          description: "Status is always 200 (Needs to be fixed). Retrieve volunteer profile details"
+          schema:
+            type: "array"
+            items:
+              $ref: '#/definitions/InfoBadge'
 definitions:
   Activity:
     type: "object"
@@ -467,6 +491,49 @@ definitions:
         type: "integer"
       type:
         type: "integer"
+  Badge:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      url:
+        type: "string"
+      skill:
+        type: "string"
+      badge:
+        type: "string"
+      badge_name:
+        type: "string"
+  InfoBadge:
+    type: "object"
+    properties:
+      info:
+        type: "object"
+        properties:
+          badge:
+            type: "string"
+          volunteer_id:
+            type: "string"
+          star:
+            type: "integer"
+          skill:
+            type: "string"
+          points:
+            type: "integer"
+          gaugeExp:
+            type: "integer"
+          id:
+            type: "string"
+          url:
+            type: "string"
+          badge_name:
+            type: "string"
+      percentCompleted:
+        type: "integer"
+      badges:
+        type: "array"
+        items:
+          $ref: '#/definitions/Badge'
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
