# src/main/java/com/example/ethelon/model/Badge.java
@@ -1,0 +1,16 @@
+package com.example.ethelon.model;
+
+import lombok.Data;
+
+/**
+ * This model is for Badge
+ * @author Kobe Kyle Relativo
+ */
+@Data
+public class Badge {
+    private int id;
+    private String url;
+    private String skill;
+    private String badge;
+    private String badge_name;
+}
